--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -1,36 +1,118 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>{%block title%}SISTEMA DE INFORMACIÓN MONITOREO ZONA ALTA Y SECA{%endblock%}</title>
-    <link href="{{MEDIA_URL}}css/style.css" rel="stylesheet" type="text/css" media="all" title=""/>
-    <script src="{{MEDIA_URL}}js/jquery.js" type="text/javascript"></script>
-    <script src="{{MEDIA_URL}}js/jquery.quicksearch.js" type="text/javascript"></script>
-    <script src="{{MEDIA_URL}}js/jquery.tablesorter.min.js" type="text/javascript" ></script>
-    
-<script type="text/javascript">
-			
-			// Aplicar QuickSearch a la tabla y la lista
-			$(document).ready(function () {
-				
-				$('table#table_example tbody tr').quicksearch({
-					position: 'before',
-					attached: 'table#table_example',
-					stripeRowClass: ['odd', 'even'],
-					labelText: 'Buscar en la tabla',
-					delay: 100
-				});
-				
-			});
-</script>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>{%block title%}SISTEMA DE INFORMACIÓN MONITOREO ZONA ALTA Y SECA{%endblock%}</title>
+        <link href="{{MEDIA_URL}}css/style.css" rel="stylesheet" type="text/css" media="all" title=""/>
+        <script src="{{MEDIA_URL}}js/jquery.js" type="text/javascript"></script>
+        <script src="{{MEDIA_URL}}js/jquery.quicksearch.js" type="text/javascript"></script>
+        <script src="{{MEDIA_URL}}js/jquery.tablesorter.min.js" type="text/javascript" ></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+        <script type="text/javascript">			
+            // Aplicar QuickSearch a la tabla y la lista
+            $(document).ready(function () {				
+                $('table#table_example tbody tr').quicksearch({
+                    position: 'before',
+                    attached: 'table#table_example',
+                    stripeRowClass: ['odd', 'even'],
+                    labelText: 'Buscar en la tabla',
+                    delay: 100
+                });
+                var map;
+                var myLatlng = new google.maps.LatLng(13,-85);
+                var myOptions = {
+                    zoom: 7,
+                    mapTypeControl: false,
+                    center: myLatlng,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                }
+                map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+            });
+        </script>
 	{%block extra_header%}{%endblock%}
-</head>
-<body>
+    </head>
+    <body>
+        <div id="header">
+            <div class="wrapper">
+                <div class="top">
+                    <div class="titulo">SISTEMA DE INFORMACIÓN Y MONITOREO</div>
+                    <div class="entrar_link">
+                        <img src="/archivos/imagen/entrar.png" alt="Entrar">
+                        <a href="/admin/">Entrar</a>
+                    </div>
+                    <div class="clean"></div>
+                </div>
+                <div class="tools">
+                    <div class="subtitulo">
+                        Organizaciones de Zona Seca y Zona Alta <br>
+                        de Nicaragua
+                    </div>
+                    <div class="nav">
+                        <a href="#" class="init">Inicio</a>
+                        <a href="/consulta/" class="query">Consulta</a>
+                        <a href="/acerca/" class="about">Acerca</a>
+                    </div>
+                    <div class="clean"></div>
+                </div>
+            </div>
+        </div>
+        <div class="clean"></div>
+        <div id="user1">
+            <div class="wrapper">
+                <div class="actualmente">
+                    <div class="datos">
+                        <div class="title">Actualmente</div>
+                        <br>
+                        <div class="cuerpo">
+                            <img src="/archivos/imagen/familias.png" class="familias" alt="Familias">
+                            <span class="cant">600+</span><br>
+                            <span>familias</span>                            
+                        </div>
+                        <div class="cuerpo">
+                            <img src="/archivos/imagen/organizaciones.png" class="organizaciones" alt="Familias">
+                            <br>
+                            <span class="cant">7</span>
+                            <span>Organizaciones</span>
+                        </div>
+                        <div class="cuerpo">
+                            <span class="personas">245</span>
+                            <img src="/archivos/imagen/mujeres.png" alt="Mujeres" class="personas">
+                            <span class="personas">380</span>
+                            <img src="/archivos/imagen/hombres.png" alt="Hombres" class="personas">
+                        </div>
+                        <br>
+                        <a href="#" class="explorar"></a>
+                        <div class="clean"></div>
+                    </div>
+                </div>
+                <div class="mapa">
+                    <div id="map_canvas"></div>                    
+                </div>
+                <div class="acerca">
+                    <div class="title">Acerca de</div>
+                    <div class="cuerpo">
+                        Etiam nisi nunc sociis scelerisque ac duis magnis aenean. Natoque, a scelerisque nec porta mus rhoncus adipiscing magnis quis elit nisi porta aliquam integer, dapibus tortor cursus, ut et et. Est et, phasellus parturient? Et parturient nunc lundium proin egestas amet sed duis ut ultricies aliquam proin porta odio a eros montes mauris velit cursus eros porttitor urna magna magna! Ut porta sagittis, porttitor turpis amet? Scelerisque ridiculus egestas facilisis aliquet phasellus!
+                        <br><br>Mus adipiscing placerat, cum turpis magna! Eu odio? Mauris tincidunt sagittis pulvinar ac vut platea dignissim. Magnis elementum, adipiscing cum! Ac tortor duis dictumst? Magna sit aliquet cum! Nunc pellentesque.
+                        <a href="#">Continuar leyendo <img src="/archivos/imagen/seguir.png" class="seguir" alt="seguir"></a>
+                    </div>
+                </div>
+                <div class="clean"></div>
+            </div>
+        </div>
+        <div id="user2">
+            <div class="wrapper1">
 
-{% block contenido %}
-
-{% endblock %}
-
-
-</body>
+            </div>
+        </div>
+        <div id="footer">
+            <div class="wrapper">
+                <div class="organizaciones">
+                    <span class="title">Organizaciones</span><br>
+                    <span class="zonas">Zona Alta &nbsp;|</span><br>
+                    <span class="zonas">Zona Seca |</span>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
