--- a/monitoreo/templates/index.html
+++ b/monitoreo/templates/index.html
@@ -1,7 +1,67 @@
 {% extends "base.html" %}
 
-{% block contenido %}
+{% block extra_header %}
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+    // Aplicar QuickSearch a la tabla y la lista
+    $(document).ready(function () {
+        $('table#table_example tbody tr').quicksearch({
+            position: 'before',
+            attached: 'table#table_example',
+            stripeRowClass: ['odd', 'even'],
+            labelText: 'Buscar en la tabla',
+            delay: 100
+        });
+        var map;
+        var myLatlng = new google.maps.LatLng(13,-85);
+        var myOptions = {
+            zoom: 7,
+            mapTypeControl: false,
+            center: myLatlng,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+    });
+</script>
+{% endblock %}
 
-pagina de inicio
-
+{% block index %}
+<div class="actualmente">
+    <div class="datos">
+        <div class="title">Actualmente</div>
+        <br>
+        <div class="cuerpo">
+            <img src="/archivos/imagen/familias.png" class="familias" alt="Familias">
+            <span class="cant">600+</span><br>
+            <span>familias</span>
+        </div>
+        <div class="cuerpo">
+            <img src="/archivos/imagen/organizaciones.png" class="organizaciones" alt="Familias">
+            <br>
+            <span class="cant">7</span>
+            <span>Organizaciones</span>
+        </div>
+        <div class="cuerpo">
+            <span class="personas">245</span>
+            <img src="/archivos/imagen/mujeres.png" alt="Mujeres" class="personas">
+            <span class="personas">380</span>
+            <img src="/archivos/imagen/hombres.png" alt="Hombres" class="personas">
+        </div>
+        <br>
+        <a href="#" class="explorar"></a>
+        <div class="clean"></div>
+    </div>
+</div>
+<div class="mapa">
+    <div id="map_canvas"></div>
+</div>
+<div class="acerca">
+    <div class="title">Acerca de</div>
+    <div class="cuerpo">
+        Etiam nisi nunc sociis scelerisque ac duis magnis aenean. Natoque, a scelerisque nec porta mus rhoncus adipiscing magnis quis elit nisi porta aliquam integer, dapibus tortor cursus, ut et et. Est et, phasellus parturient? Et parturient nunc lundium proin egestas amet sed duis ut ultricies aliquam proin porta odio a eros montes mauris velit cursus eros porttitor urna magna magna! Ut porta sagittis, porttitor turpis amet? Scelerisque ridiculus egestas facilisis aliquet phasellus!
+        <br><br>Mus adipiscing placerat, cum turpis magna! Eu odio? Mauris tincidunt sagittis pulvinar ac vut platea dignissim. Magnis elementum, adipiscing cum! Ac tortor duis dictumst? Magna sit aliquet cum! Nunc pellentesque.
+        <a href="#">Continuar leyendo <img src="/archivos/imagen/seguir.png" class="seguir" alt="seguir"></a>
+    </div>    
+</div>
+<div class="clean"></div>
 {% endblock %}
