--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -7,6 +7,17 @@
         <script src="{{MEDIA_URL}}js/jquery.js" type="text/javascript"></script>
         <script src="{{MEDIA_URL}}js/jquery.quicksearch.js" type="text/javascript"></script>
         <script src="{{MEDIA_URL}}js/jquery.tablesorter.min.js" type="text/javascript" ></script>
+        <script type="text/javascript">
+            $(document).ready(function(){
+                $('table#table_example tbody tr').quicksearch({
+                    position: 'before',
+                    attached: 'table#table_example',
+                    stripeRowClass: ['odd', 'even'],
+                    labelText: 'Buscar en la tabla',
+                    delay: 100
+                });
+            });
+        </script>
 	{%block extra_header%}{%endblock%}
     </head>
     <body>
