--- a/monitoreo/templates/simas/animales.html
+++ b/monitoreo/templates/simas/animales.html
@@ -2,70 +2,71 @@
 {%load unslugify %}
 
 {% block contenido %}
-<table id="table_example" class="tablesorter" style="font-size:90%">
-<caption>Los Animales</caption>
- <thead>
-    <tr>
-        <th></th>
-        <th>Número</th>
-        <th>%</th>
-        <th>cantidad</th>
-        <th>Cantidad/Familia</th>
-    </tr>
- </thead>
- <tbody>
-    <tr>
-        <td>TOTAL</td>
-        <td>{{totales.numero}}</td>
-        <td>{{totales.porcentaje_num}}</td>
-        <td>{{totales.animales}}</td>
-        <td>{{totales.porcentaje_animal}}</td>
-    </tr>
-    {%for fila in tabla%}
-    <tr>
-        {%for celda in fila%}
-            <td>{{celda}}</td>
-        {%endfor%}
-    </tr>
-    {%endfor%}
-</tbody>
-</table>
+<div class="contenido">
+    <table id="table_example" class="tablesorter" style="font-size:90%">
+        <caption>Los Animales</caption>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Número</th>
+                <th>%</th>
+                <th>cantidad</th>
+                <th>Cantidad/Familia</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>TOTAL</td>
+                <td>{{totales.numero}}</td>
+                <td>{{totales.porcentaje_num}}</td>
+                <td>{{totales.animales}}</td>
+                <td>{{totales.porcentaje_animal}}</td>
+            </tr>
+            {%for fila in tabla%}
+            <tr>
+                {%for celda in fila%}
+                <td>{{celda}}</td>
+                {%endfor%}
+            </tr>
+            {%endfor%}
+        </tbody>
+    </table>
 
-<table id="table_example" class="tablesorter" style="font-size:90%">
-<caption>Los Animales y la Producción </caption>
- <thead>
-    <tr>
-        <th>Animal</th>
-        <th>Cantidad</th>
-        <th>Producto</th>
-        <th>Unidad</th>
-        <th>Cantidad Producida</th>
-        <th>Consumo</th>
-        <th>Venta Libre</th>
-        <th>Venta organizada</th>
-    </tr>
- </thead>
- <tbody>
-    {%for fila in tabla_produccion%}
-    <tr>
-        {%for celda in fila%}
-        <td>{{celda}}</td>
-        {%endfor%}
-    </tr>
-    {%endfor%}
-</tbody>
-</table>
-
- <script>
-		// Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
-		// ademas que ordene por defecto las filas 0,0 y 2,1
-		$(document).ready(function() 
-    		{ 
-        		//$("#table_example").tablesorter(); 
-			//$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
-			$("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
-    		} 
-		); 
-	</script>
+    <table id="table_example" class="tablesorter" style="font-size:90%">
+        <caption>Los Animales y la Producción </caption>
+        <thead>
+            <tr>
+                <th>Animal</th>
+                <th>Cantidad</th>
+                <th>Producto</th>
+                <th>Unidad</th>
+                <th>Cantidad Producida</th>
+                <th>Consumo</th>
+                <th>Venta Libre</th>
+                <th>Venta organizada</th>
+            </tr>
+        </thead>
+        <tbody>
+            {%for fila in tabla_produccion%}
+            <tr>
+                {%for celda in fila%}
+                <td>{{celda}}</td>
+                {%endfor%}
+            </tr>
+            {%endfor%}
+        </tbody>
+    </table>
+</div>
+<script>
+    // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
+    // ademas que ordene por defecto las filas 0,0 y 2,1
+    $(document).ready(function()
+    {
+        //$("#table_example").tablesorter();
+        //$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
+        $("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
+    }
+); 
+</script>
 
 {% endblock %}
