--- a/monitoreo/templates/simas/arboles.html
+++ b/monitoreo/templates/simas/arboles.html
@@ -2,8 +2,8 @@
 {%load unslugify %}
 
 {% block extra_header %}
- <script type="text/javascript">
-    var activo = 0; 
+<script type="text/javascript">
+    var activo = 0;
     function click_callback(id){
         $.getJSON('/grafo/arboles/' + id, function(data) {
             if (activo!= id){
@@ -15,122 +15,122 @@
             }
         });
     }
-$(document).ready(function() {
-    $("#grafico1").click(function(){
-        $("#grafico1").addClass('enlace_seleccionado');
-        $("#grafico2").removeClass('enlace_seleccionado');
-        $("#grafico3").removeClass('enlace_seleccionado');
-        $("#grafico4").removeClass('enlace_seleccionado');
-        $("#grafico5").removeClass('enlace_seleccionado');
-    });
+    $(document).ready(function() {
+        $("#grafico1").click(function(){
+            $("#grafico1").addClass('enlace_seleccionado');
+            $("#grafico2").removeClass('enlace_seleccionado');
+            $("#grafico3").removeClass('enlace_seleccionado');
+            $("#grafico4").removeClass('enlace_seleccionado');
+            $("#grafico5").removeClass('enlace_seleccionado');
+        });
     
-    $("#grafico2").click(function(){
-        $("#grafico2").addClass('enlace_seleccionado'); 
-        $("#grafico1").removeClass('enlace_seleccionado');
-        $("#grafico3").removeClass('enlace_seleccionado');
-        $("#grafico4").removeClass('enlace_seleccionado');
-        $("#grafico5").removeClass('enlace_seleccionado');
-    });
+        $("#grafico2").click(function(){
+            $("#grafico2").addClass('enlace_seleccionado');
+            $("#grafico1").removeClass('enlace_seleccionado');
+            $("#grafico3").removeClass('enlace_seleccionado');
+            $("#grafico4").removeClass('enlace_seleccionado');
+            $("#grafico5").removeClass('enlace_seleccionado');
+        });
 
-    $("#grafico3").click(function(){
-        $("#grafico3").addClass('enlace_seleccionado'); 
-        $("#grafico1").removeClass('enlace_seleccionado');
-        $("#grafico2").removeClass('enlace_seleccionado');
-        $("#grafico4").removeClass('enlace_seleccionado');
-        $("#grafico5").removeClass('enlace_seleccionado');
-    });
-    $("#grafico4").click(function(){
-        $("#grafico4").addClass('enlace_seleccionado'); 
-        $("#grafico1").removeClass('enlace_seleccionado');
-        $("#grafico2").removeClass('enlace_seleccionado');
-        $("#grafico3").removeClass('enlace_seleccionado');
-        $("#grafico5").removeClass('enlace_seleccionado');
-    });
+        $("#grafico3").click(function(){
+            $("#grafico3").addClass('enlace_seleccionado');
+            $("#grafico1").removeClass('enlace_seleccionado');
+            $("#grafico2").removeClass('enlace_seleccionado');
+            $("#grafico4").removeClass('enlace_seleccionado');
+            $("#grafico5").removeClass('enlace_seleccionado');
+        });
+        $("#grafico4").click(function(){
+            $("#grafico4").addClass('enlace_seleccionado');
+            $("#grafico1").removeClass('enlace_seleccionado');
+            $("#grafico2").removeClass('enlace_seleccionado');
+            $("#grafico3").removeClass('enlace_seleccionado');
+            $("#grafico5").removeClass('enlace_seleccionado');
+        });
 
-    $("#grafico5").click(function(){
-        $("#grafico5").addClass('enlace_seleccionado'); 
-        $("#grafico1").removeClass('enlace_seleccionado');
-        $("#grafico2").removeClass('enlace_seleccionado');
-        $("#grafico3").removeClass('enlace_seleccionado');
-        $("#grafico4").removeClass('enlace_seleccionado');
+        $("#grafico5").click(function(){
+            $("#grafico5").addClass('enlace_seleccionado');
+            $("#grafico1").removeClass('enlace_seleccionado');
+            $("#grafico2").removeClass('enlace_seleccionado');
+            $("#grafico3").removeClass('enlace_seleccionado');
+            $("#grafico4").removeClass('enlace_seleccionado');
+        });
     });
-});
 </script>
 {% endblock %}
 {% block contenido %}
-
-<div id="grafo"></div>
-<table id="table_example" class="tablesorter" style="font-size:90%">
-<caption>Tabla Existencia de Arboles</caption>
-    <thead>
-         <tr>
-				 <th>TIPO</th>
-                 <th>TOTAL</th>
-                 <th>PROMEDIO/FINCA</th>
-                 <th>FRECUENCIA FINCA TIENE ÁRBOLES</th>
-         </tr>
-    </thead>
-    <tbody>
-<tr>
-    <td>Maderables</td>
-    <td>{{maderable}}</td>
-    <td>{{pro_maderable}}</td>
-    <td>{{maderablect}}</td>
-</tr>
-<tr>
-    <td>Forrajero</td>
-    <td>{{forrajero}}</td>
-    <td>{{pro_forrajero}}</td>
-    <td>{{forrajeroct}}</td>
-</tr>
-<tr>
-    <td>Energetico</td>
-    <td>{{energetico}}</td>
-    <td>{{pro_energetico}}</td>
-    <td>{{energeticoct}}</td>
-</tr>
-<tr>
-    <td>Frutales</td>
-    <td>{{frutal}}</td>
-    <td>{{pro_frutal}}</td>
-    <td>{{frutalct}}</td>
-</tr>
-</tbody>
-</table>
-<br>
-<table id="table_example" class="tablesorter" style="font-size:90%">
-<caption>Reforestación en ultimo año</caption>
- <thead>
-    <tr>
-        <th>Actividad</th>
-        <th>Frecuencia</th>
-        <th>% Frec.</th>
-        <th>Cantidad de arboles sembrados</th>
-        <th>% Cantidad de arboles</th>
-    </tr>
- </thead>
- <tbody>
-    {%for key, value in tabla.items%}
-    <tr>
-        <td>{{key|unslugify}}</td>
-        <td>{{value.numero|floatformat}}</td>
-        <td>{{value.porcentaje_num|floatformat}}</td>
-        <td>{{value.nativos|floatformat}}</td>
-        <td>{{value.porcentaje_nativos|floatformat}}</td>
-    </tr>
-    {%endfor%}
-<tbody>
-</table>
-
- <script>
-		// Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
-		// ademas que ordene por defecto las filas 0,0 y 2,1
-		$(document).ready(function() 
-    		{ 
-        		//$("#table_example").tablesorter(); 
-			//$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
-			$("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
-    		} 
-		); 
-	</script>
+<div class="contenido">
+    <div id="grafo"></div>
+    <table id="table_example" class="tablesorter" style="font-size:90%">
+        <caption>Tabla Existencia de Arboles</caption>
+        <thead>
+            <tr>
+                <th>TIPO</th>
+                <th>TOTAL</th>
+                <th>PROMEDIO/FINCA</th>
+                <th>FRECUENCIA FINCA TIENE ÁRBOLES</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Maderables</td>
+                <td>{{maderable}}</td>
+                <td>{{pro_maderable}}</td>
+                <td>{{maderablect}}</td>
+            </tr>
+            <tr>
+                <td>Forrajero</td>
+                <td>{{forrajero}}</td>
+                <td>{{pro_forrajero}}</td>
+                <td>{{forrajeroct}}</td>
+            </tr>
+            <tr>
+                <td>Energetico</td>
+                <td>{{energetico}}</td>
+                <td>{{pro_energetico}}</td>
+                <td>{{energeticoct}}</td>
+            </tr>
+            <tr>
+                <td>Frutales</td>
+                <td>{{frutal}}</td>
+                <td>{{pro_frutal}}</td>
+                <td>{{frutalct}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <br>
+    <table id="table_example" class="tablesorter" style="font-size:90%">
+        <caption>Reforestación en ultimo año</caption>
+        <thead>
+            <tr>
+                <th>Actividad</th>
+                <th>Frecuencia</th>
+                <th>% Frec.</th>
+                <th>Cantidad de arboles sembrados</th>
+                <th>% Cantidad de arboles</th>
+            </tr>
+        </thead>
+        <tbody>
+            {%for key, value in tabla.items%}
+            <tr>
+                <td>{{key|unslugify}}</td>
+                <td>{{value.numero|floatformat}}</td>
+                <td>{{value.porcentaje_num|floatformat}}</td>
+                <td>{{value.nativos|floatformat}}</td>
+                <td>{{value.porcentaje_nativos|floatformat}}</td>
+            </tr>
+            {%endfor%}
+        <tbody>
+    </table>
+</div>
+<script>
+    // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
+    // ademas que ordene por defecto las filas 0,0 y 2,1
+    $(document).ready(function()
+    {
+        //$("#table_example").tablesorter();
+        //$("#table_example").tablesorter({sortList:[[0,0],[2,1]], widgets: ['zebra']});
+        $("#table_example").tablesorter({sortList:[[1,0],[1,1]], widgets: ['zebra']});
+    }
+); 
+</script>
 {% endblock %}
