--- a/monitoreo/templates/simas/educacion.html
+++ b/monitoreo/templates/simas/educacion.html
@@ -2,33 +2,33 @@
 {%load unslugify %}
 
 {% block contenido %}
-
-<table id="table_example" class="tablesorter" style="font-size:90%">
-    <caption>Educación</caption>
-    <thead>
-        <tr>
-            <th></th>
-            <th>Número total</th>
-            <th>No sabe leer</th>
-            <th>Primaria incompleta</th>
-            <th>Primaria completa</th>
-            <th>Secundaria incompleta</th>
-            <th>Bachiller</th>
-            <th>Universitario</th>
-            <th>Vive fuera de la comunidad</th>
-        </tr>
-    </thead>
-    <tbody>
-        {%for fila in tabla_educacion%}
-        <tr>
-            {%for celda in fila %}
-            <td>{{celda}}</td>
+<div class="contenido">
+    <table id="table_example" class="tablesorter" style="font-size:90%">
+        <caption>Educación</caption>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Número total</th>
+                <th>No sabe leer</th>
+                <th>Primaria incompleta</th>
+                <th>Primaria completa</th>
+                <th>Secundaria incompleta</th>
+                <th>Bachiller</th>
+                <th>Universitario</th>
+                <th>Vive fuera de la comunidad</th>
+            </tr>
+        </thead>
+        <tbody>
+            {%for fila in tabla_educacion%}
+            <tr>
+                {%for celda in fila %}
+                <td>{{celda}}</td>
+                {%endfor%}
+            </tr>
             {%endfor%}
-        </tr>
-        {%endfor%}
-    </tbody>
-</table>
-
+        </tbody>
+    </table>
+</div>
 <script>
     // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
     // ademas que ordene por defecto las filas 0,0 y 2,1
