--- a/monitoreo/templates/base.html
+++ b/monitoreo/templates/base.html
@@ -4,26 +4,20 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{%block title%}SISTEMA DE INFORMACIÓN MONITOREO ZONA ALTA Y SECA{%endblock%}</title>
         <link href="{{MEDIA_URL}}css/style.css" rel="stylesheet" type="text/css" media="all" title=""/>
-        <script src="{{MEDIA_URL}}js/jquery.js" type="text/javascript"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="{{MEDIA_URL}}js/jquery.quicksearch.js" type="text/javascript"></script>
         <script src="{{MEDIA_URL}}js/jquery.tablesorter.min.js" type="text/javascript" ></script>
         <script type="text/javascript">
             $(document).ready(function(){
-                $('table#table_example tbody tr').quicksearch({
-                    position: 'before',
-                    attached: 'table#table_example',
-                    stripeRowClass: ['odd', 'even'],
-                    labelText: 'Buscar en la tabla',
-                    delay: 100
-                });
-                
+                $('input#id_search').quicksearch('table#table_example tbody tr');
+                /*
                 $('table#table_example1 tbody tr').quicksearch({
                     position: 'before',
                     attached: 'table#table_example1',
                     stripeRowClass: ['odd', 'even'],
                     labelText: 'Buscar en la tabla',
                     delay: 100
-                });
+                });*/
             });
         </script>
 	{%block extra_header%}{%endblock%}
