--- a/monitoreo/templates/simas/agua.html
+++ b/monitoreo/templates/simas/agua.html
@@ -2,22 +2,25 @@
 {%load unslugify %}
 {% block contenido %}
 <div class="contenido">
-<table id="table_example" class="tablesorter" style="font-size:90%">
-    <thead>
+    <form action="#">
+        <label>Buscar en tabla: </label><input type="text" name="search" value="" id="id_search" placeholder="Search" autofocus />
+    </form>
+    <table id="table_example" class="tablesorter" style="font-size:90%">
+        <thead>
+            <tr>
+                <th>Fuente</th>
+                <th>Frecuencia</th>
+                <th>%</th>
+            </tr>
+        </thead>
+        {% for fila in tabla%}
         <tr>
-            <th>Fuente</th>
-            <th>Frecuencia</th>
-            <th>%</th>
+            {%for celda in fila%}
+            <td>{{celda}}</td>
+            {%endfor%}
         </tr>
-    </thead>
-    {% for fila in tabla%}
-    <tr>
-        {%for celda in fila%}
-        <td>{{celda}}</td>
         {%endfor%}
-    </tr>
-    {%endfor%}
-</table>
+    </table>
 </div>
 <script>
     // Hacemos que nos aplique cebra a las filas de la tabla y permita ordenarla
